# webkitgtk-sharp

./: Makefile.am  README.md  configure.ac  webkitgtk-sharp-3.0.pc.in
doc/: Makefile.am
m4/: cairo.m4  soup.m4
sources/: Makefile.am  webkitgtk-sharp-api.raw  webkitgtk-sharp.metadata  webkitgtk-sharp.snk
sources/glue/: Makefile.am
